// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane preparation golden matches the golden with a highlighted reverse traversal 1`] = `
{
  "forwardLane": {
    "bestIndex": 2,
    "currentIndex": -1,
    "maxSpeed": 7.44,
    "minSpeed": 3.66,
    "originalIndices": [
      0,
      1,
      3,
      4,
      6,
    ],
    "points": [
      {
        "direction": "same",
        "id": "e1",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 812,
        "speed": 5.4,
        "x": 0,
      },
      {
        "direction": "same",
        "id": "e2",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 718,
        "speed": 6.1,
        "x": 0.14285714285714285,
      },
      {
        "direction": "same",
        "id": "e4",
        "isBest": true,
        "isExcluded": false,
        "sectionTime": 635,
        "speed": 6.9,
        "x": 0.42857142857142855,
      },
      {
        "direction": "same",
        "id": "e5",
        "isBest": false,
        "isExcluded": true,
        "sectionTime": 1043,
        "speed": 4.2,
        "x": 0.5714285714285714,
      },
      {
        "direction": "same",
        "id": "e7",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 684,
        "speed": 6.4,
        "x": 0.8571428571428571,
      },
    ],
  },
  "reverseLane": {
    "bestIndex": 2,
    "currentIndex": 1,
    "maxSpeed": 6.44,
    "minSpeed": 4.76,
    "originalIndices": [
      2,
      5,
      7,
    ],
    "points": [
      {
        "direction": "reverse",
        "id": "e3",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 876,
        "speed": 5,
        "x": 0.2857142857142857,
      },
      {
        "direction": "reverse",
        "id": "e6",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 755,
        "speed": 5.8,
        "x": 0.7142857142857143,
      },
      {
        "direction": "reverse",
        "id": "e8",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 706,
        "speed": 6.2,
        "x": 1,
      },
    ],
  },
}
`;

exports[`lane preparation golden matches the golden with no highlighted point 1`] = `
{
  "forwardLane": {
    "bestIndex": 2,
    "currentIndex": -1,
    "maxSpeed": 7.44,
    "minSpeed": 3.66,
    "originalIndices": [
      0,
      1,
      3,
      4,
      6,
    ],
    "points": [
      {
        "direction": "same",
        "id": "e1",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 812,
        "speed": 5.4,
        "x": 0,
      },
      {
        "direction": "same",
        "id": "e2",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 718,
        "speed": 6.1,
        "x": 0.14285714285714285,
      },
      {
        "direction": "same",
        "id": "e4",
        "isBest": true,
        "isExcluded": false,
        "sectionTime": 635,
        "speed": 6.9,
        "x": 0.42857142857142855,
      },
      {
        "direction": "same",
        "id": "e5",
        "isBest": false,
        "isExcluded": true,
        "sectionTime": 1043,
        "speed": 4.2,
        "x": 0.5714285714285714,
      },
      {
        "direction": "same",
        "id": "e7",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 684,
        "speed": 6.4,
        "x": 0.8571428571428571,
      },
    ],
  },
  "reverseLane": {
    "bestIndex": 2,
    "currentIndex": -1,
    "maxSpeed": 6.44,
    "minSpeed": 4.76,
    "originalIndices": [
      2,
      5,
      7,
    ],
    "points": [
      {
        "direction": "reverse",
        "id": "e3",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 876,
        "speed": 5,
        "x": 0.2857142857142857,
      },
      {
        "direction": "reverse",
        "id": "e6",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 755,
        "speed": 5.8,
        "x": 0.7142857142857143,
      },
      {
        "direction": "reverse",
        "id": "e8",
        "isBest": false,
        "isExcluded": false,
        "sectionTime": 706,
        "speed": 6.2,
        "x": 1,
      },
    ],
  },
}
`;
